objects/tffa__FinancialStatement__c.object
<CustomObject>
    <description>Captures financial statements of an applicant such as balance sheet, cash show, income, expense, financial year for which data is captured.</description>
    <fields>
        <fullName>tffa__ContentDocumentId__c</fullName>
        <description>Identifier for the document captured for current financial statement</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ContentDocumentName__c</fullName>
        <description>Name of the document captured for current financial statement.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Content document name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ContentDocumentType__c</fullName>
        <description>ContentType of the document</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <description>End date for the financial year</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__FinancialYear__c</fullName>
        <description>Financial year for which statement is captured</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Reference to parent party object.</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Financial Statements</relationshipLabel>
        <relationshipName>FinancialStatements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__PeriodName__c</fullName>
        <description>Period for which the financial statement was captured. e.g. Jan 19 - Dec 19</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Period name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProcessId__c</fullName>
        <description>A unique identifier of the process generating data for the financial statement.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Process id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProcessProgress__c</fullName>
        <description>Captures progress of synchronization or data pull from external system</description>
        <label>Process progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ProcessState__c</fullName>
        <description>The state associated with pulling (or processing) the financial statement from the external system. Typically seen in asynchronous systems.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Process state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProcessStatus__c</fullName>
        <description>Captures progress of synchronization or data pull from external system as discrete states.</description>
        <label>Process status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FinancialStatementProcessStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Provider__c</fullName>
        <description>The provider of the financial statement. For an aggregator, it will store the name of the aggregator and source will store the actual source/platform used within the aggregator.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SourcePartyId__c</fullName>
        <description>External id of the party in the external system acting as the source of the financial statement.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source party id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this financial statement if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <description>Start date for the financial year</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of financial statement . e.g. BALANCESHEET,INCOME, CASH_FLOW</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__FinancialStatementType</valueSetName>
        </valueSet>
    </fields>
    <label>Financial Statement</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>FinancialStatement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FinancialStatements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>